--- a/frontend/src/app/heroes/heroes.component.html
+++ b/frontend/src/app/heroes/heroes.component.html
@@ -1,8 +1,18 @@
-<h2>{{hero.name | uppercase}}</h2>
-<div>
-  <span>Id: {{hero.id}}</span>
-</div>
-<div>
-  <label>Name: </label>
-  <input id="name" [(ngModel)]="hero.name" placeholder="name">
+<h2>Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <button (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
+      <span class="badge">{{hero.id}}</span>
+      <span class="name">{{hero.name}}</span>
+    </button>
+  </li>
+</ul>
+
+<div *ngIf="selectedHero">
+  <h3>{{selectedHero.name}} Details</h3>
+  <div>Id: {{selectedHero.id}}</div>
+  <div>
+    <label>Name: </label>
+    <input id="hero-name" [(ngModel)]="selectedHero.name"/>
+  </div>
 </div>
